seaqt/QtUiPlugin/gen_customwidget.h

class QDesignerCustomWidgetCollectionInterface;
class QDesignerCustomWidgetInterface;
class QIcon;
class QWidget;
typedef struct QDesignerCustomWidgetCollectionInterface QDesignerCustomWidgetCollectionInterface;
typedef struct QDesignerCustomWidgetInterface QDesignerCustomWidgetInterface;
typedef struct QIcon QIcon;
typedef struct QWidget QWidget;
struct seaqt_string QDesignerCustomWidgetInterface_name(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_group(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_toolTip(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_whatsThis(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_includeFile(const QDesignerCustomWidgetInterface* self);
QIcon* QDesignerCustomWidgetInterface_icon(const QDesignerCustomWidgetInterface* self);
bool QDesignerCustomWidgetInterface_isContainer(const QDesignerCustomWidgetInterface* self);
QWidget* QDesignerCustomWidgetInterface_createWidget(QDesignerCustomWidgetInterface* self, QWidget* parent);
bool QDesignerCustomWidgetInterface_isInitialized(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_domXml(const QDesignerCustomWidgetInterface* self);
struct seaqt_string QDesignerCustomWidgetInterface_codeTemplate(const QDesignerCustomWidgetInterface* self);
void QDesignerCustomWidgetCollectionInterface_operatorAssign(QDesignerCustomWidgetCollectionInterface* self, QDesignerCustomWidgetCollectionInterface* from);